Skill section added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h4><span class="accent-size">+3</span><br> anos de experiência</h4>
               </div> 
               <div class="col-4 box medium orange years"> <!-- Box 2 -->
-                <h4><span class="accent-size"><i class="ph-bold ph-lightbulb"></i></span><br> criativo</h4>  
+                <h4><span class="accent-size"><i class="ph-bold ph-lightbulb"></i></span><br>Criativo</h4>  
             </div>
               <div class="col-4 box medium magenta years">  <!-- Box 3 -->
                 <h4><span class="accent-size"><i class="ph-bold ph-code"></i></span><br> Conhecimento em HTML, CSS e JS</h4>
@@ -152,8 +152,222 @@
             </div>
         </div>
       </div>
-      <!-- Coluna da direita -->
     </div>
+    <!-- Coluna da direita -->
+    <!-- Skills -->
+    <div class="row gy-5"> 
+      <div class="col-12 session-title"> <!-- Título da sessão -->
+        <h2 id="outline">Ferramentas e Skills</h2>
+        <h2>Ferramentas e Skills</h2>
+      </div>
+    </div>
+    <div class="row gy-5">
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon photoshop"
+            data-bs-toggle="popover" data-bs-placement="right"
+            data-bs-custom-class="custom-popover"
+            data-bs-title="Custom popover"
+            data-bs-content="This popover is themed via CSS variables.">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon figma">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Figma
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon illustrator">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Illustrator
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon after-effects">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          After Effects
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon vscode">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          VS Code
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon bootstrap">
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Bootstrap
+        </div>
+      </div>
+    </div>
+    <div class="row gy-5">
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+      <!-- Inner Skill -->
+      <div class="col skill-align">
+        <div class="clip-shape">
+          <div class="hover-div">
+            <div class="skill-icon">
+              <i class="bi bi-playstation"></i>
+            </div>
+            <div class="shape">
+              <div class="inner-shape">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="skill-name">
+          Photoshop
+        </div>
+      </div>
+    </div>
+    <!-- Skills -->
     <!-- Limite caracteres -->
     <script src="assets/js/limit.js"></script>
     <!-- Limite caracteres -->
