Portfolio text label added

--- a/index.html
+++ b/index.html
@@ -60,9 +60,18 @@
                     </div>
               </div>
               <div class="row gallery">
-                <div class="col port-thumb thumb-1"></div>
+                <div class="col port-thumb thumb-1">
+                  <div class="text-label">
+                    <div class="inner-label-container">
+                      <h2>Virtual Reality</h2>
+                      <p>a community for VR and novices alike, regular and friendly chat.</p>
+                      <div class="port-button">
+                        Ver projeto 
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="col port-thumb thumb-2"></div>
-                <div class="col port-thumb thumb-3"></div>
               </div>
             </div>
             </div>
@@ -125,10 +134,10 @@
                     <div class="row gx-0">
                         <div class="col box small"> <!-- Redes -->
                         <div class="row gx-4 social">
-                                <div class="col social-elipse linkedin"><i class="bi bi-linkedin"></i></div>
-                                <div class="col social-elipse behance"><i class="bi bi-behance"></i></div>
-                                <div class="col social-elipse dribbble"><i class="bi bi-dribbble"></i></div>
-                                <div class="col social-elipse github"><i class="bi bi-github"></i></div>
+                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse linkedin"><i class="bi bi-linkedin"></i></div></a>
+                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse behance"><i class="bi bi-behance"></i></div></a>
+                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse dribbble"><i class="bi bi-dribbble"></i></div></a>
+                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse github"><i class="bi bi-github"></i></div></a>
                         </div>
                         </div>
                     </div>
@@ -166,11 +175,7 @@
       <div class="col skill-align">
         <div class="clip-shape">
           <div class="hover-div">
-            <div class="skill-icon photoshop"
-            data-bs-toggle="popover" data-bs-placement="right"
-            data-bs-custom-class="custom-popover"
-            data-bs-title="Custom popover"
-            data-bs-content="This popover is themed via CSS variables.">
+            <div class="skill-icon photoshop">
             </div>
             <div class="shape">
               <div class="inner-shape">
