Updated portfólio hover

--- a/index.html
+++ b/index.html
@@ -56,22 +56,38 @@
                         <h2>Portfólio</h2>
                     </div>
                     <div class="col inner-container">
-                        <h5 class="text-button">Ver mais</h5>
+                      
+                        <h5 class="text-button"><a class="text-button" href="https://www.behance.net/lucasrcalil" target="_blank">Ver mais</a></h5>
+                      
                     </div>
               </div>
               <div class="row gallery">
-                <div class="col port-thumb thumb-1">
-                  <div class="text-label">
-                    <div class="inner-label-container">
-                      <h2>Virtual Reality</h2>
-                      <p>a community for VR and novices alike, regular and friendly chat.</p>
-                      <div class="port-button">
-                        Ver projeto 
+                <a class="col" href="https://www.youtube.com" target="_blank">
+                  <div class="col port-thumb thumb-1">
+                    <div class="text-label">
+                      <div class="inner-label-container">
+                        <h2>Virtual Reality</h2>
+                        <p>a community for VR and novices alike, regular and friendly chat.</p>
+                        <div class="port-button">
+                          Ver projeto 
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="col port-thumb thumb-2"></div>
+                </a>
+                <a class="col" href="https://www.youtube.com" target="_blank">
+                  <div class="col port-thumb thumb-1">
+                    <div class="text-label">
+                      <div class="inner-label-container">
+                        <h2>Virtual Reality</h2>
+                        <p>a community for VR and novices alike, regular and friendly chat.</p>
+                        <div class="port-button">
+                          Ver projeto 
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
               </div>
             </div>
             </div>
@@ -134,10 +150,10 @@
                     <div class="row gx-0">
                         <div class="col box small"> <!-- Redes -->
                         <div class="row gx-4 social">
-                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse linkedin"><i class="bi bi-linkedin"></i></div></a>
-                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse behance"><i class="bi bi-behance"></i></div></a>
-                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse dribbble"><i class="bi bi-dribbble"></i></div></a>
-                                <a href="https://www.linkedin.com/i/lucasrcalil"><div class="col social-elipse github"><i class="bi bi-github"></i></div></a>
+                                <a href="https://www.linkedin.com/in/lucasrcalil/" target="_blank"><div class="col social-elipse linkedin"><i class="bi bi-linkedin"></i></div></a>
+                                <a href="https://www.behance.net/lucasrcalil" target="_blank"><div class="col social-elipse behance"><i class="bi bi-behance"></i></div></a>
+                                <a href="https://dribbble.com/lucasrcalil" target="_blank"><div class="col social-elipse dribbble"><i class="bi bi-dribbble"></i></div></a>
+                                <a href="https://github.com/lucasrcalil" target="_blank"><div class="col social-elipse github"><i class="bi bi-github"></i></div></a>
                         </div>
                         </div>
                     </div>
@@ -148,14 +164,10 @@
                   <div class="inner-container">
                     <h2>Sobre</h2>
                     <div class="col" id="about">
-                      <p>Trabalho como Web Designer e tenho uma paixão por criar experiências digitais envolventes e visualmente atraentes. Sou um entusiasta de jogos, apaixonado por novas tecnologias e sempre em busca das últimas tendências de design para aprimorar minhas habilidades e conhecimentos.
-
-                        😎 SOBRE MIM
-                        ⊚ 4 anos de experiência em Design
-                        ⊚ Amo o design de interfaces de
+                      <p>Trabalho como Web Designer e tenho uma paixão por criar experiências digitais envolventes e visualmente atraentes. Sou um entusiasta de jogos, apaixonado por novas tecnologias e sempre em busca das últimas tendências de design para aprimorar minhas habilidades e conhecimentos.<br>
+                      Minha trajetória em todas as áreas do design, tanto gráfico quanto digital, permitiu que eu encontrasse diversas soluções visuais para os projetos em que participei ao longo desses 3 anos de carreira. Desde o início desta jornada, trago comigo a filosofia de que um design não precisa abrir mão da beleza para funcionar, e nem abrir mão da funcionalidade para ser bonito.
                       </p>
                     </div>
-                    <div class="col"><h5 class="text-button">Ler mais</h5></div>
                 </div>
                 </div>
             </div>
@@ -251,6 +263,8 @@
           VS Code
         </div>
       </div>
+    </div>
+    <div class="row gy-5">
       <!-- Inner Skill -->
       <div class="col skill-align">
         <div class="clip-shape">
@@ -267,8 +281,6 @@
           Bootstrap
         </div>
       </div>
-    </div>
-    <div class="row gy-5">
       <!-- Inner Skill -->
       <div class="col skill-align">
         <div class="clip-shape">
@@ -283,7 +295,7 @@
           </div>
         </div>
         <div class="skill-name">
-          Photoshop
+          Adobe Premiere
         </div>
       </div>
       <!-- Inner Skill -->
@@ -300,7 +312,7 @@
           </div>
         </div>
         <div class="skill-name">
-          Photoshop
+          Design Thinking
         </div>
       </div>
       <!-- Inner Skill -->
@@ -317,58 +329,7 @@
           </div>
         </div>
         <div class="skill-name">
-          Photoshop
-        </div>
-      </div>
-      <!-- Inner Skill -->
-      <div class="col skill-align">
-        <div class="clip-shape">
-          <div class="hover-div">
-            <div class="skill-icon">
-              <i class="bi bi-playstation"></i>
-            </div>
-            <div class="shape">
-              <div class="inner-shape">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="skill-name">
-          Photoshop
-        </div>
-      </div>
-      <!-- Inner Skill -->
-      <div class="col skill-align">
-        <div class="clip-shape">
-          <div class="hover-div">
-            <div class="skill-icon">
-              <i class="bi bi-playstation"></i>
-            </div>
-            <div class="shape">
-              <div class="inner-shape">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="skill-name">
-          Photoshop
-        </div>
-      </div>
-      <!-- Inner Skill -->
-      <div class="col skill-align">
-        <div class="clip-shape">
-          <div class="hover-div">
-            <div class="skill-icon">
-              <i class="bi bi-playstation"></i>
-            </div>
-            <div class="shape">
-              <div class="inner-shape">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="skill-name">
-          Photoshop
+          Prototipação
         </div>
       </div>
     </div>
