--- a/index.html
+++ b/index.html
@@ -48,10 +48,24 @@
       </div>
     </div>
     <!-- Header -->
+    <!-- Header Mobile -->
+    <div class="container">
+      <div class="row">
+        <nav class="col header mobile">
+            <div class="hamburguer">
+              <i class="ph ph-list"></i>
+            </div>
+            <div class="logo">
+              <img src="assets/img/logo.png" alt="">
+            </div>
+        </nav>
+      </div>
+    </div>
+    <!-- Header Mobile -->
     <div class="container-xxl">
       <div class="row">
         <!-- Coluna da esquerda -->
-        <div class="col left"> 
+        <div class="col-xl-6 col-md-6 left"> 
           <div class="row">
             <div class="row gx-0">
               <div class="col-12 box big title"> <!-- Título -->
