--- a/signature/signature.html
+++ b/signature/signature.html
@@ -37,6 +37,12 @@
       font-size: 18px;
       margin-right: 5px;
     }
+    .name {
+      margin-right: 5px;
+    }
+    .separator {
+      margin-right: 5px;
+    }
   </style>
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
   <body>
@@ -50,8 +56,16 @@
               width: fit-content;
             "
           >
-            <img src="img/pic.png" alt="" style="max-width: 77px" /><br />
-            <img src="img/logo.png" alt="" style="max-width: 35px" />
+            <img
+              src="https://lucasrcalil.vercel.app/signature/img/pic.png"
+              alt=""
+              style="max-width: 77px"
+            /><br />
+            <img
+              src="https://lucasrcalil.vercel.app/signature/img/logo.png"
+              alt=""
+              style="max-width: 35px"
+            />
           </td>
           <td>
             <span
@@ -59,19 +73,26 @@
               style="font-weight: 900; color: #ff3c77; font-size: 22px"
               >Lucas Ramos Calil</span
             >
-            | WEB & UI DESIGNER<br />
-            <a href=""
+            <span class="separator">|</span> WEB & UI DESIGNER<br />
+            <a href="tel:+5511986663014" target="_blank"
               ><i class="ph-duotone ph-phone"></i>(11) 98666-3014<br
             /></a>
-            <a href=""
+            <a href="mailto:lucasrcalil@lrcdesign.com" target="_blank"
               ><i class="ph-duotone ph-envelope-open"></i
               >lucasrcalil@lrcdesign.com<br
             /></a>
-            <a href=""><i class="ph-duotone ph-globe"></i>www.lrcdesign.com</a>
+            <a href="https://www.lrcdesign.com" target="_blank"
+              ><i class="ph-duotone ph-globe"></i>www.lrcdesign.com</a
+            >
           </td>
         </tr>
       </table>
-      <img src="img/bg.png" alt="" class="bg" style="max-width: 249px" />
+      <img
+        src="https://lucasrcalil.vercel.app/signature/img/bg.png"
+        alt=""
+        class="bg"
+        style="max-width: 249px"
+      />
     </div>
   </body>
 </html>
